# Robot_Arm_Simulator

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  LineAlg.h  Robot.h  RotationalJoint.h  Space.h
models/pieces/: Base.glb  Joint1.glb  Joint2.glb  Joint3.glb  Joint4.glb  Joint6.glb
src/: Camera.cpp  Robot.cpp  RotationalJoint.cpp  Space.cpp  main.cpp
videos/: gif-2
